--- a/_posts/18-02-2023 ViT-22B.md
+++ b/_posts/18-02-2023 ViT-22B.md
@@ -9,7 +9,7 @@ ViT-22B is a new vision backbone that is the largest reported to date. This has 
 
 According to the author, VIT-22b is highly efficient, offers an improved tradeoff between fairness and performance, and demonstrates improved generalization to out-of-distribution tasks in image recognition. ViT22B shows an improved tradeoff between fairness and performance.
 
-![22b](/assets/22b.jpg)
+![22b](/assets/22b.png)
 
 Paper: https://arxiv.org/abs/2302.05442
 
