--- a/_posts/18-02-2023 ViT-22B.md
+++ b/_posts/18-02-2023 ViT-22B.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "ViT-22B, the largest vision backbone reported to date [AI - Computer Vision]"
+title:  "The LLM fever reaches the AI for code shores [AI - NLP]"
 ---
 
-# Scaling Vision Transformers to 22 Billion Parameters
+# Chat with AI Co-pilots
 
 ViT-22B is a new vision backbone that is the largest reported to date. This has important implications for scaling machine learning models and improving their capabilities. 
 
